# doc_script

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  grammar.cfg  language_tutorial.md
grammar/: nonterminals.cfg  rules.cfg  terminals.cfg
jlalr/: Jlalr1.java
scope_macro/: Cargo.toml
scope_macro/src/: lib.rs  structure.rs
src/: formula_suppress.rs  iterating.rs  lib.rs  main.rs  stdlib.rs
src/ast/: declarations.rs  expressions.rs  field.rs  foundations.rs  import.rs  mod.rs  name.rs  names.rs  parameter.rs  scoped_elements.rs  statements.rs
src/ast/tests/: block_tests.rs  compilation_unit_test.rs  declaration_test.rs  expressions_test.rs  imports_test.rs  mod.rs  newline_test.rs  statements_test.rs
src/ast/weeder/: attributes.rs  fields.rs  mod.rs  parameters.rs  structure.rs
src/code_generation/: mod.rs  value.rs
src/code_generation/value_evaluator/: expression_evaluator.rs  instance_access_evaluator.rs  instance_evaluator.rs  literal_evaluator.rs  mod.rs  value.rs  (+2 more)
src/env/: address_hash.rs  env_builder.rs  environment.rs  mod.rs  module_verifier.rs  scope.rs
src/parser/: mod.rs  models.rs  parsing.rs  rules.rs
src/search/: breadth_first.rs  depth_first.rs  mod.rs  traversal.rs
src/tests/: formula_suppress.rs  mod.rs  multi_file_tests.rs  single_files_tests.rs
src/tokenizer/: comment.rs  cursor.rs  identifier.rs  keyword.rs  mod.rs  operator.rs  token.rs  tokenizer.rs  tokenizing.rs  whitespace.rs
std/essential/: render.ds
std/rect/: size.ds
tests/: mod.rs
tests/multi_file_tests/: mod.rs
tests/single_file_tests/: mod.rs
(+70 files in other folders)
