[package]
name = "doc_script"
version = "0.1.0"
authors = ["Yaxin Cheng <Yaxin.Cheng@iCloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "doc"
path = "src/main.rs"

[dependencies]
thiserror = "1.0"
scope_macro = { path = "scope_macro" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
enum-as-inner = "0.3"
